...
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorGray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAlarmName"
                        style="@style/edit_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/title_hint_milestone"
                        android:paddingBottom="@dimen/activity_horizontal_margin"
...
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ringtoneLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="@{() -> fragment.openRingtoneSelector()}"
...
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/vibrationLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="@{() -> fragment.openVibrationSelector()}"
...
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorGray" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/vibrationSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingEnd="20dp"
                        android:layout_weight="5"
                        android:onCheckedChanged="@{() -> fragment.offVibration()}"
                        tools:ignore="RtlSymmetry" />
...
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/repeatLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="@{() -> fragment.openRepeatSelector()}"
...
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorGray" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/repeatSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingEnd="20dp"
                        android:layout_weight="5"
                        android:onCheckedChanged="@{() -> fragment.offRepeat()}"
                        tools:ignore="RtlSymmetry" />
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/show_phrases_option"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/phrasesValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/purple_200"
                            android:textStyle="bold"
                            tools:text="Mostrar" />

...
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorGray" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/phrasesSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingEnd="20dp"
                        android:layout_weight="5"
                        android:onCheckedChanged="@{() -> fragment.offPhrases()}"
                        tools:ignore="RtlSymmetry" />
...
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorGray"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/okButton"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorAccent"
                    android:text="@string/save_button"
...
