<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.about.AboutFragment"
    android:background="@color/background_dark_theme">


    <FrameLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>


    <TextView
        android:id="@+id/textViewFooter"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_marginTop="32dp"
        android:text="@string/copyright_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>