...
            android:paddingHorizontal="16dp"
            android:text="@string/on_string"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/vibrations_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/okButton"

            android:layout_below="@+id/onOffSwitch"
            android:layout_marginTop="16dp"
...
